[gd_scene load_steps=14 format=3 uid="uid://c3lj6eyydhp8a"]

[ext_resource type="Script" path="res://scenes/main_menu/main_menu.gd" id="1_iy1qu"]
[ext_resource type="Texture2D" uid="uid://bpnh4htq7lysy" path="res://scenes/UI/menuUIImages/bgimage.png" id="2_1qemf"]
[ext_resource type="FontFile" uid="uid://c0twuvkqjtx5x" path="res://asssets/fonts/Audiowide-Regular.ttf" id="2_4iq5s"]
[ext_resource type="PackedScene" path="res://scenes/main_menu/SettingsMenu.tscn" id="2_l5nak"]
[ext_resource type="Texture2D" uid="uid://b0hxj3wp38l8h" path="res://scenes/UI/menuUIImages/CroppedButtons/start1.png" id="4_1wdu6"]
[ext_resource type="Texture2D" uid="uid://by887fiaj4h4e" path="res://scenes/UI/menuUIImages/CroppedButtons/start2.png" id="5_lp2mk"]
[ext_resource type="Texture2D" uid="uid://c6o1rlxik4tbc" path="res://scenes/UI/menuUIImages/CroppedButtons/options1.png" id="6_3rs08"]
[ext_resource type="Texture2D" uid="uid://2d6t4ml8m5p7" path="res://scenes/UI/menuUIImages/CroppedButtons/options2.png" id="7_j5246"]
[ext_resource type="Texture2D" uid="uid://lc0ryrn5gqds" path="res://scenes/UI/menuUIImages/CroppedButtons/exit1.png" id="8_bkn0f"]
[ext_resource type="Texture2D" uid="uid://c2hog2uqb4tn" path="res://scenes/UI/menuUIImages/CroppedButtons/exit2.png" id="9_o8boh"]
[ext_resource type="AudioStream" uid="uid://bg5awugs0wf7i" path="res://sound/music_theme.wav" id="10_q5e6l"]
[ext_resource type="AudioStream" uid="uid://brnlg7ae7ar2d" path="res://sound/menu_highlight.wav" id="11_vsguw"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_qc4oc"]
texture = ExtResource("2_1qemf")

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_iy1qu")

[node name="SettingsMenu" parent="." instance=ExtResource("2_l5nak")]

[node name="SplashArt" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_qc4oc")

[node name="GameTitle" type="Label" parent="."]
visible = false
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -511.0
offset_top = -13.0
offset_right = 521.0
offset_bottom = 115.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("2_4iq5s")
theme_override_font_sizes/font_size = 100
text = "Untitled Roguelike"
horizontal_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
offset_right = 238.0
offset_bottom = 425.0
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 100
theme_override_constants/margin_bottom = 120

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 10

[node name="PlayButton" type="TextureButton" parent="MarginContainer/VBoxContainer/MarginContainer"]
layout_mode = 2
texture_normal = ExtResource("4_1wdu6")
texture_hover = ExtResource("5_lp2mk")

[node name="MarginContainer3" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 10

[node name="SettingsButton" type="TextureButton" parent="MarginContainer/VBoxContainer/MarginContainer3"]
layout_mode = 2
texture_normal = ExtResource("6_3rs08")
texture_hover = ExtResource("7_j5246")

[node name="MarginContainer2" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 10

[node name="QuitButton" type="TextureButton" parent="MarginContainer/VBoxContainer/MarginContainer2"]
layout_mode = 2
texture_normal = ExtResource("8_bkn0f")
texture_hover = ExtResource("9_o8boh")

[node name="MenuMusicPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("10_q5e6l")
bus = &"Music"

[node name="ButtonHoverPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("11_vsguw")
bus = &"FX"

[connection signal="pressed" from="MarginContainer/VBoxContainer/MarginContainer/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/MarginContainer3/SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/MarginContainer2/QuitButton" to="." method="_on_quit_button_pressed"]
